Changed Some Authorization Settings

--- a/Server/Academia/ToDo.txt
+++ b/Server/Academia/ToDo.txt
@@ -33,3 +33,7 @@ New TODO
 6- Add Feedback and Questions 
 //Done     7- Change Action to Verb In Request/Response 
 //Done     8- Add Title ,AlertImportantPost and Allow Comments variables To Post
+
+
+1- Submit Quiz/Assignment Endpoints 
+2- Add Quiz User info Endpoint
